--- a/frontend/careerbridge-frontend/src/app/shared/components/header/header.component.html
+++ b/frontend/careerbridge-frontend/src/app/shared/components/header/header.component.html
@@ -1,1 +1,44 @@
-<p>header works!</p>
+<mat-toolbar color="primary" class="header-toolbar">
+  <div class="logo-container">
+    <a routerLink="/">
+      <span class="logo-text">CareerBridge</span>
+    </a>
+  </div>
+  
+  <div class="nav-links">
+    <a mat-button routerLink="/jobs" routerLinkActive="active-link">Jobs</a>
+    <a mat-button routerLink="/dashboard" routerLinkActive="active-link">Dashboard</a>
+    <a mat-button routerLink="/profile" routerLinkActive="active-link" *ngIf="isLoggedIn">Profile</a>
+  </div>
+  
+  <span class="spacer"></span>
+  
+  <div class="auth-container">
+    <ng-container *ngIf="!isLoggedIn">
+      <a mat-button routerLink="/auth/login">Login</a>
+      <a mat-raised-button color="accent" routerLink="/auth/register">Register</a>
+    </ng-container>
+    
+    <ng-container *ngIf="isLoggedIn">
+      <button mat-button [matMenuTriggerFor]="userMenu" class="user-menu-button">
+        <span class="user-name">{{ userName }}</span>
+        <mat-icon>arrow_drop_down</mat-icon>
+      </button>
+      
+      <mat-menu #userMenu="matMenu">
+        <a mat-menu-item routerLink="/profile">
+          <mat-icon>person</mat-icon>
+          <span>My Profile</span>
+        </a>
+        <a mat-menu-item routerLink="/dashboard">
+          <mat-icon>dashboard</mat-icon>
+          <span>Dashboard</span>
+        </a>
+        <button mat-menu-item (click)="logout()">
+          <mat-icon>exit_to_app</mat-icon>
+          <span>Logout</span>
+        </button>
+      </mat-menu>
+    </ng-container>
+  </div>
+</mat-toolbar>
